<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/foodies"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_below="@id/foodies_logo"/>

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/appName"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:textColorHint="#ffffff"
        android:hint="@string/enter_mobile_number"
        android:autofillHints="0-9" />

    <EditText
        android:id="@+id/appPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/mobileNumber"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColorLink="#ffffff"
        android:maxLength="10"
        android:maxLines="1"
        android:textColorHint="#ffffff"
        android:hint="@string/password"
        android:autofillHints="a-z, A-Z" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appPassword"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="#ffffff"
        android:text="@string/log_in"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/registerHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <ImageView
       android:id="@+id/foodies_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/foodies_logo3" />

</RelativeLayout>